--- a/todo/src/app/login/login.component.html
+++ b/todo/src/app/login/login.component.html
@@ -1,4 +1,7 @@
-User Name : <input type="text" name="username" [(ngModel)]="username">
-Password  : <input type="password" name="password" [(ngModel)]="password">
+<small *ngIf='!validpwd'>{{errormsg}}</small>
+<div>
+    User Name : <input type="text" name="username" [(ngModel)]="username">
+    Password : <input type="password" name="password" [(ngModel)]="password">
 
-<button (click)="handleLogin()"> Login </button>
+    <button (click)="handleLogin()"> Login </button>
+</div>
